<resources>
    <string name="app_name">Shop Ease</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="most_popular">Most Popular</string>
    <string name="categories">Categories</string>
    <string name="featured_products">Featured Products</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="offers">Offers</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
</resources>